style: fix text-wrap syntax in layout.css

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -154,5 +154,5 @@
 }
 
 .slidev-code code {
-  text-wrap: 'auto';
+  text-wrap: auto;
 }
